[fix: jameskolce/atgrid.css#25] Add overflow:auto to container

--- a/src/_atgrid.scss
+++ b/src/_atgrid.scss
@@ -11,6 +11,7 @@
     max-width: $container-width;
     padding-left: $gutter / 2;
     padding-right: $gutter / 2;
+    overflow: auto;
   }
 
   [#{$prefix}grid] {
